# mnist

./: .clang-format  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  cliff.toml  pixi.toml
config/: show_data.example.toml
configs/: config.example.toml
scripts/: preprocess.py
src/: CMakeLists.txt
src/lib/mnist/: CMakeLists.txt  mnist.h  mnist.hpp
src/lib/mnist/data/: data.h  data.hpp
src/lib/mnist/data/dataloader/: dataloader.hpp
src/lib/mnist/data/dataset/: dataset.cpp  dataset.h  dataset.hpp
src/lib/mnist/model/: model.cpp  model.hpp
src/lib/mnist/utils/: utils.cpp  utils.h  utils.hpp
